--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Fimae</string>
+    <string name="action_home">Home</string>
+    <string name="action_feed">Feed</string>
+    <string name="action_chat">Chat</string>
+    <string name="action_profile">Me</string>
 </resources>
